tests/error/error24.jan
// error24: Zero sized array

x[0] -> ;

skip
